checkpoint: gesture control mode done!

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 </div>
             </div>
             <div class="header-actions">
-                <span>&lt;/&gt;</span>
-                <span class="ip-text">IP</span>
-                <span>⋮</span>
+                <label>
+                    <input type="checkbox" id="gestureToggle" />
+                    Gesture Mode
+                </label>
             </div>
         </header>
 
@@ -47,7 +48,8 @@
                     </button>
                 </div>
                 <div class="lock-mechanism">
-                    <label for="lockToggle" id="lockToggleLabel">🔓 Lock</label> <label class="toggle-switch">
+                    <label for="lockToggle" id="lockToggleLabel">🔓 Lock</label>
+                    <label class="toggle-switch">
                         <input type="checkbox" id="lockToggle">
                         <span class="switch-lever"></span>
                     </label>
