checkpoint: wes donn! tapi patah² & rung rapi

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- === Middle Column === -->
             <div class="column column-middle">
                 <!-- Action Feedback -->
-                <div id="feedbackDisplay" class="feedback-display">⬆️</div>
+                <div id="feedbackDisplay" class="feedback-display">🔄️</div>
 
                 <!-- Icon Buttons: Horn and Light -->
                 <div class="icon-buttons-pair">
